--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "vite-plugin-handlebars": "^2.0.0"
   },
   "dependencies": {
-    "axios": "^1.9.0",
-    "normalize.css": "^8.0.1"
+    "axios": "^1.9.0"
   }
 }
